# Greenblock

./: .gitignore  README.md  TODOS.md
.github/workflows/: ci.yml
arduino/: sensor_hub.ino
deploy/systemd/: auto-update.sh  greenblock-autoupdate.service  greenblock-autoupdate.timer  greenblock-backend.service  greenblock-serial-bridge.service  install-systemd.sh
greenblock-backend/: .env  .env.example  data_manager.py  greenblock_analytics.db  main.py  requirements.txt  serial_bridge.py
greenblock-backend/data/: carbon_db.json  organic_db.json
greenblock-backend/ml/: anomaly_detector.py
greenblock-backend/routes/: agri.py  alerts.py  anomaly.py  blockchain.py  carbon.py  carbon_savings.py  digest.py  grid_score.py  health.py  hvac.py  occupancy.py  realtime.py  score.py  sensors.py  visitor.py
greenblock-blockchain/: .env.example  hardhat.config.js  package.json
greenblock-blockchain/algorand/: deploy.py  requirements.txt
greenblock-blockchain/algorand/contracts/: credit_registry.py  marketplace.py  retirement_ledger.py
greenblock-blockchain/contracts/: CreditRegistry.sol  GreenToken.sol  Marketplace.sol  RetirementLedger.sol
greenblock-blockchain/scripts/: deploy.js
greenblock-blockchain/solana/: Anchor.toml  package.json
greenblock-blockchain/solana/programs/greenblock/: Cargo.toml
greenblock-blockchain/solana/programs/greenblock/src/: lib.rs
greenblock-frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
greenblock-frontend/src/: App.jsx  index.css
(+41 files in other folders)
