[package]
name = "greenblock"
version = "0.1.0"
description = "GreenBlock IoT Carbon Credit — Solana Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "greenblock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
